[gd_scene load_steps=6 format=3 uid="uid://c0f0h24u7wfrh"]

[ext_resource type="Texture2D" uid="uid://b8a1xfqe1gfp5" path="res://main_window/top_bar/search_bar/images/search.svg" id="1_1sgf3"]
[ext_resource type="Script" path="res://main_window/top_bar/search_bar/search_bar.gd" id="1_6r0fp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wbed6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_voael"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oc8vk"]

[node name="SearchBar" type="PanelContainer"]
offset_left = 14.0
offset_right = 121.0
offset_bottom = 28.0
size_flags_horizontal = 3
mouse_default_cursor_shape = 1
theme_type_variation = &"SearchBar"
script = ExtResource("1_6r0fp")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 4
alignment = 1

[node name="Icon" type="TextureRect" parent="HBox"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("1_1sgf3")
stretch_mode = 3

[node name="SearchQuery" type="LineEdit" parent="HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/caret_width = 2
theme_override_font_sizes/font_size = 14
theme_override_styles/focus = SubResource("StyleBoxEmpty_wbed6")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_voael")
theme_override_styles/normal = SubResource("StyleBoxEmpty_oc8vk")
placeholder_text = "Search To-Dos..."
context_menu_enabled = false
clear_button_enabled = true
draw_control_chars = true
select_all_on_focus = true
caret_blink = true
caret_blink_interval = 0.45

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="focus_entered" from="HBox/SearchQuery" to="." method="_on_search_query_focus_entered"]
[connection signal="focus_exited" from="HBox/SearchQuery" to="." method="_on_search_query_focus_exited"]
[connection signal="gui_input" from="HBox/SearchQuery" to="." method="_on_search_query_gui_input"]
[connection signal="text_changed" from="HBox/SearchQuery" to="." method="_on_search_query_text_changed"]
[connection signal="text_submitted" from="HBox/SearchQuery" to="." method="_on_search_query_text_submitted"]
